--- a/src/assets/scss/pages/_work.scss
+++ b/src/assets/scss/pages/_work.scss
@@ -273,4 +273,10 @@
     padding-left: 2rem;
     padding-right: 2rem;
   }
+
+  @include min-width($mobile) {
+    .left-area-coontainer {
+      margin-top: 2rem;
+    }
+  }
 }
